<resources>
    <string name="app_name">FancyScreen</string>
    <string name="email">Email</string>
    <string name="department">Department</string>
    <string name="direct_reports">Direct Reports</string>
    <string name="extension">Extension</string>
    <string name="supervisor">Supervisor</string>
    <string name="photo">photo</string>
    <string name="name">Michelle Townsend</string>
    <string name="mt_ourcompany_com">mt@ourcompany.com</string>
    <string name="design">Design</string>
    <string name="gail_davers" translatable="false">Gail Davers</string>
    <string name="_2253">2253</string>
</resources>